# katas

./: CMakeLists.txt  README.md  table_iterator.hpp  table_iterator.kdev4  test_iterator2d.cpp  test_official.cpp
table_iterator/: CMakeLists.txt  table_iterator.hpp
